# gbmt-splits

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gbmtsplits/: __init__.py  clustering.py  data.py  split.py  splitters.py  test_data.csv  tests.py
gbmtsplits/logs/: config.py
src/gbmt-split/: __init__.py  split.py
src/gbmtsplits/: __init__.py  cli.py  clustering.py  plot.py  split.py  splits.py  test_data.csv  tests.py
src/gbmtsplits/logs/: __init__.py
