[metadata]
name = gbmt-splits
version = 1.0.0
description = A tool to create well-balanced data splits for multi-task learning
long_description = file: README.md
long_description_content_type = text/markdown

url = https://https://github.com/sohviluukkonen/gbmt-splits

author = Sohvi Luukkonen
author_email = sohvi.luukkonen@hotmail.com
maintainer = Sohvi Luukkonen
maintainer_email = sohvi.luukkonen@hotmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7

keywords =
    data split
    multi-task

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    scikit-learn
    matplotlib
    seaborn
    pandas
    rdkit
    numpy
    tqdm
    pulp

[options.packages.find]
where = src

[options.package_data]
* = *.csv

[options.entry_points]
console_scripts =
    gbmtsplits = gbmtsplits.cli:main
